--- a/style.css
+++ b/style.css
@@ -13,3 +13,18 @@ h2{
 p{
     text-align: center;
 }
+h3{
+    text-align: center;
+}
+h5{
+    text-align: center;
+}
+h6{
+    text-align: center;
+}
+a{
+    text-align: center;
+}
+header{
+    text-align: center;
+}
