--- a/style.css
+++ b/style.css
@@ -28,3 +28,10 @@ a{
 header{
     text-align: center;
 }
+body{
+    background-image: url(Background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
